# sifu_render

./: Cargo.toml
sifu_render_derive/: Cargo.toml
sifu_render_derive/src/: get_ident.rs  lib.rs  parse.rs  raw_field.rs  raw_rust_type.rs  repeated_raw_field.rs  uniform_binding.rs  util.rs  wgsl_type_str.rs
sifu_render_derive/src/quotes/: mesh_instance.rs  mod.rs  shared.rs  uniform.rs  vertex.rs
sifu_render_derive/src/raw_value/: byte_count.rs  dim.rs  mod.rs  raw_value_count.rs  raw_value_type.rs  rust_scalar.rs  vertex_type.rs  wgsl_scalar.rs  wgsl_type.rs
src/: gpu_buffer.rs  lib.rs  main.rs  renderer.rs  uniform.rs
src/gpu_buffer/: gpu_buffer.rs  index.rs  instance.rs  mod.rs  uniform.rs  vertex.rs
src/mesh/: mesh.rs  mesh_instance.rs  mod.rs  vertex.rs
src/sample/: camera_uniform.rs  mod.rs  sample_shader.wgsl  sample_vertex.rs
src/shader/: mod.rs  preprocess.rs  shader.rs
src/texture/: color.rs  image_texture.rs  mod.rs  pixel_format.rs  render_texture.rs  texture_ref.rs
src/uniform_binding/: binding_resource.rs  mod.rs  uniform_binding.rs
