[package]
name = "sifu_render"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.5"
wgpu = "0.19"
cgmath = "0.18"
bytemuck = { version = "1.19.0", features = ["derive"] }

pollster = "0.4.0"

env_logger = "0.11.5"
log = "0.4.22"


sifu_render_derive.path = "./sifu_render_derive"

image = { version = "0.25", optional = true }

[features]
default = ["image"]
image = ["dep:image"]
