[package]
name = "sifu_render"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
wgpu = "26.0"
cgmath = "0.18"
bytemuck = { version = "1.23.0", features = ["derive"] }

pollster = "0.4.0"

env_logger = "0.11.8"
log = "0.4.27"


sifu_render_derive.path = "./sifu_render_derive"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[features]
default = ["image"]
image = ["dep:image"]
