[package]
name = "sifu_render"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0"
cgmath = "0.18"
bytemuck = { version = "1.23.0", features = ["derive"] }


sifu_render_derive.path = "./sifu_render_derive"

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
], optional = true }

[dev-dependencies]
winit = "0.30.12"
pollster = "0.4.0"


[features]
default = ["image"]
image = ["dep:image"]

[[example]]
name = "winit_window"
